--- a/stylesheet.css
+++ b/stylesheet.css
@@ -277,7 +277,7 @@ Main
 
 .article-img-box {
   width:47%;
-  height: 25vw;
+  height:25vw;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -291,13 +291,14 @@ Main
 
 .article-img-box img{
   width: 100%;
+  height:17vw;
 }
 
 .article-img-box-title {
   background-color: blueviolet;
   position: relative;
   left:0;
-  top:39;
+  top:38;
   width:30%;
   display: flex;
   justify-content: center;
@@ -420,6 +421,7 @@ Aside
   align-items: center;
   width: 100%;
   height: 12vw;
+  margin: 0;
   border-bottom:grey solid 1px;
   margin-bottom: 10px;
   position: relative;
@@ -433,10 +435,10 @@ Aside
   background-color: blueviolet;
   color:white;
   width:10%;
-  height: 3vw;
+  height:3vw;
   position:absolute;
-  top:13;
-  left:0;
+  top:14;
+  left:12;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -447,13 +449,16 @@ Aside
 .aside-box-img {
   display: flex;
   justify-content: center;
-  width: 55%;
-  height: 10vw;
+  width:55%;
+  height:10vw;
+  margin:0;
 }
 
-.aside-box-img img {
+.aside-box-img img{
   width: 100%;
   height: 10vw;
+  margin: 0;
+  padding: 0;
 }
 
 .aside-box-text {
